--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#12091a" />
-  <title>Navidad2 para Luminé ✨</title>
+  <title>Para Luminé ✨</title>
 
   <!-- Open Graph / Social preview (WhatsApp, FB, etc.) -->
   <meta property="og:type" content="website" />
