--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
           </div>
 
           <aside class="card">
-            <h2 class="h2">¿Qué se actualiza<?/h2>
+            <h2 class="h2">¿Qué se actualiza?</h2>
             <ul class="list">
               <li>Nombre en poster, firma, frases y mensaje</li>
               <li>Promesa de amistad</li>
